WIP: try to pass a proper dataformat