@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 test {
@@ -40,5 +41,10 @@ jar {
     attributes 'Implementation-Title': "LITIENGINE input playground",
             'Main-Class': 'de.gurkenlabs.litiengine.input.Program'
   }
+}
+
+test {
+  jvmArgs += '--enable-preview'
+  jvmArgs += '--enable-native-access=ALL-UNNAMED'
 }
 
